rerender fix and window scrollbars dropped

--- a/front/src/Visual.css
+++ b/front/src/Visual.css
@@ -7,7 +7,7 @@
 }
 
 #graph-display{
-        
+    overflow:hidden;
     outline:none;
     border:black !important;
 }
